# ChrisOS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  SConstruct  common.cmake  common.mk  env.sh  gdb.sh  gen.sh  mkiso.sh  run.sh
arch/: Makefile
arch/ia32/: Makefile  (+12 more)
include/: assert.h  standard.h  stdlib.h  string.h
kernel/: CMakeLists.txt  Makefile  SConscript  align.c  frame_alloc.c  kprintf.c  layout.c  main.c  mem.c  multiboot.c  panic.c  process.c  process.h  standard.h  string.c  terminal.c
kernel/boot/: CMakeLists.txt  SConscript  layout.h  multiboot.c  multiboot.h
kernel/drivers/: SConscript  tty.c  tty.h  vga.c  vga.h
kernel/ia32/: CMakeLists.txt  Makefile  Makefile.inc  SConscript  acpi.c  acpica_osl.c  apic.c  boot.S  cpuid.c  gdt.c  hal_x86.c  idt.c  interrupts.c  io.c  isrs.S  nmi.c  paging.c  pic.c  pit.c  power.c  ps2.c  registers.c  serial.c  stack.c  stack_asm.S  ticks.c  toolchain.cmake  tss.S  tss.c  tss_asm.S  uart.c
kernel/ia32/arch/: acpi.h  acpica_osl.h  apic.h  bits.h  cpuid.h  endian.h  gdt.h  hal_x86.h  idt.h  interrupts.h  io_ports.h  msrs.h  nmi.h  paging.h  pic.h  pit.h  power.h  ps2.h  registers.h  serial.h  stack.h  ticks.h  tss.h  types.h  uart.h
kernel/ia32/pc/: link.ld
kernel/kern/: CMakeLists.txt  SConscript  cmdline.c  cmdline.h  idle.c  idle.h  main.c  mutex.c  process.c  scheduler.c  spinlock.c  syscall.c  thread.c  time.c  timer.c
kernel/mm/: CMakeLists.txt  SConscript  allocator.c  allocator.h  kmem.c  kmem.h  layout.c  layout.h  malloc.c  malloc.h  mm_types.h  pm_map.c  pm_map.h  range.h  vm_map.c  vm_map.h  vm_space.c  vm_space.h  vm_types.h
kernel/sys/: hal.h  io.h  limits.h  multiboot.h  mutex.h  param.h  process.h  scheduler.h  spinlock.h  standard.h  syscall.h  systm.h  thread.h  time.h  timer.h  types.h
kernel/terminal/: CMakeLists.txt  SConscript  terminal.c  terminal.h
kernel/tests/: SConscript  allocator_region_add_test.c  allocator_region_cut_test.c  allocator_region_insert_test.c  allocator_region_merge_test.c  allocator_region_subtract_test.c  apic_test.c  bits_test.c  tests.c  tests.h
kernel/utils/: CMakeLists.txt  SConscript  kprintf.c  kprintf.h  mem.c  mem.h  panic.c  panic.h  sort.c  sort.h  string.c  string.h  strtoul.c  strtoul.h  strtouq.c  strtouq.h
tools/: clang-checkout.sh  ia32.py  requirements.txt  rust-setup.sh  toolchain.sh
(+24 files in other folders)
